<resources>
    <string name="app_name">RentSafePlaceMobile</string>
    <string name="building_name">Building Name</string>
    <string name="building_description">Building description</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="enter_a_city_to_find_out_the_average_rental_price">Enter a city to find out the average rental price:</string>
    <string name="get_average_price">Get average price</string>
    <string name="buildings">Buildings</string>
    <string name="see_realtor">See realtor</string>
    <string name="upload_image">Upload Image</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="name_register">Name</string>
    <string name="phone_register">Phone</string>
    <string name="account">Account</string>
    <string name="type">Type:</string>
    <string name="square">Square:</string>
    <string name="price">Price:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="pets_allowed">Pets are allowed:</string>
    <string name="description">Description:</string>
    <string name="category">Category:</string>
    <string name="city">City</string>
    <string name="address">Address:</string>
    <string name="realtor">Realtor:</string>
    <string name="unknown">Unknown</string>
    <string name="info_was_changed">Info was changed</string>
    <string name="registration_success">Registration was successful</string>
    <string name="money">$</string>
</resources>