<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewEmailTitle"
        android:textSize="22sp"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/textViewEmailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/textViewLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInputEditTextEmail"
        android:textSize="18sp"
        android:layout_marginHorizontal="16dp"
        android:padding="0dp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextEmail"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewPasswordTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewEmailTitle"
        android:layout_marginHorizontal="16dp"/>
    <TextView
        android:id="@+id/textViewPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/textInputEditTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInputEditTextPassword"
        android:textSize="18sp"
        android:layout_marginHorizontal="16dp"
        android:padding="0dp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextPassword"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPasswordTitle"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        android:layout_marginHorizontal="16dp"/>
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputEditTextPassword"
        app:layout_constraintBottom_toTopOf="@id/textViewHaveAccount"
        />
    <TextView
        android:id="@+id/textViewHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintBottom_toTopOf="@id/textViewRegister"/>
    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHaveAccount"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>