<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonUploadImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3"/>

    <Button
        android:id="@+id/buttonUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        app:layout_constraintTop_toBottomOf="@id/imageViewAvatar"
        app:layout_constraintBottom_toTopOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBaseline_toBaselineOf="@id/editTextEmail"
        app:layout_constraintBottom_toTopOf="@id/textViewNameLabel"
        app:layout_constraintTop_toBottomOf="@id/buttonUploadImage"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="8dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/buttonUploadImage"
        app:layout_constraintBottom_toTopOf="@id/editTextName"
        app:layout_constraintStart_toEndOf="@id/textViewEmailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@id/editTextName"
        app:layout_constraintBottom_toTopOf="@id/textViewPhoneLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewEmailLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="8dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintBottom_toTopOf="@id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textViewPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintBaseline_toBaselineOf="@id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@id/textViewNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonSave"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@id/editTextName"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        app:layout_constraintBottom_toTopOf="@id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
